--- a/github_searcher.html
+++ b/github_searcher.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Github Profile Searcher</title>
     <style>
@@ -72,7 +71,7 @@
         <b id="name"></b><br>
         <span id="username"></span>
         <p id="bio"></p>
-        <b id="followers"></b> followers &#183;
+        <b id="followers"></b> followers <b>&#183;</b>
         <b id="following"></b> following<br><br>
         <span id="company"></span>
         <span id="email"></span><br>
@@ -102,22 +101,25 @@
 
     function printResult(json) {
         let card = document.querySelector('#card');
-        // fill out the card 
-        //card.querySelector("#url").value = json.html_url;
-        card.querySelector('img').src = `${json.avatar_url}`;
-        document.querySelector('#name').innerHTML = json.name;
-        card.querySelector('#username').innerHTML = json.login;
-        card.querySelector("#bio").innerHTML = json.bio;
-        card.querySelector("#followers").innerHTML = json.followers;
-        card.querySelector("#following").innerHTML = json.following;
+        if (json.message = "Not Found") card.innerHTML = `<h3>User not Found</h3>`;
+        else {
+            // fill out the card 
+            //card.querySelector("#url").value = json.html_url;
+            card.querySelector('img').src = `${json.avatar_url}`;
+            card.querySelector('#name').innerHTML = json.name;
+            card.querySelector('#username').innerHTML = json.login;
+            card.querySelector("#bio").innerHTML = json.bio;
+            card.querySelector("#followers").innerHTML = json.followers;
+            card.querySelector("#following").innerHTML = json.following;
 
-        card.querySelector("#company").innerHTML = json.company;       
-        card.querySelector("#email").innerHTML = json.email;       
-        card.querySelector("#location").innerHTML = json.location;       
-        card.querySelector("#blog").innerHTML = json.blog;       
+            card.querySelector("#company").innerHTML = json.company;       
+            card.querySelector("#email").innerHTML = json.email;       
+            card.querySelector("#location").innerHTML = json.location;       
+            card.querySelector("#blog").innerHTML = json.blog;       
 
-        showCard(true); 
-        console.log(json);
+            showCard(true); 
+            console.log(json);
+        }
     }
 
     async function getDataFromAPI(username) {
@@ -140,5 +142,4 @@
     }
 
 </script>
-
 </html>
