added 'edit profile' button

--- a/github_searcher.html
+++ b/github_searcher.html
@@ -38,6 +38,15 @@
             border-radius: 5px;
         }
 
+        #edit:hover { background-color: rgb(211, 211, 211);}
+        #edit {
+            width: 100%;
+            padding: 5px 0px 5px 0px;
+            margin-top: 15px; 
+            border: 1px solid lightgrey;
+            border-radius: 5px;
+        }
+
         #name { font-size: 16pt;}
         #username {color: grey;}
 
@@ -70,6 +79,7 @@
         </div>
         <b id="name"></b><br>
         <span id="username"></span>
+        <button id="edit">Edit Profile</button>
         <p id="bio"></p>
         <b id="followers"></b> followers <b>&#183;</b>
         <b id="following"></b> following<br><br>
