--- a/github_searcher.html
+++ b/github_searcher.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Github Profile Searcher</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <style>
-
         body {
             font-family: "Open Sans", sans-serif, Arial;
             display: flex;
@@ -11,13 +12,8 @@
             align-items: center;
         }
 
-        header {
-            padding: 15px;
-        }
-
-        input, button {
-            padding: 5px;
-        }
+        header { padding: 15px;}
+        input, button { padding: 5px;}
 
         img {
             height: 250px;
@@ -27,7 +23,7 @@
         }
 
         .spinner {
-            display: none; 
+            display: none;
             text-align: center;
         }
 
@@ -38,26 +34,35 @@
             border-radius: 5px;
         }
 
-        #edit:hover { background-color: rgb(211, 211, 211);}
+        #pfp-container { 
+            display: flex;
+            justify-content: center;
+        }
+
+        #edit:hover {background-color: rgb(211, 211, 211);}
         #edit {
             width: 100%;
             padding: 5px 0px 5px 0px;
-            margin-top: 15px; 
+            margin-top: 15px;
             border: 1px solid lightgrey;
             border-radius: 5px;
         }
 
-        #followers_url:hover, #following_url:hover { color: blue;}
-        #followers_url, #following_url {
+        #followers_url, #following_url, #blog-link {
             text-decoration: none;
             color: black;
         }
 
-
-
+        #followers_url:hover, #following_url:hover {color: blue;}
         #name { font-size: 16pt;}
-        #username {color: grey;}
+        #username { color: grey;}
+        #other-info p { margin: 7px 0px;}
+        #error { display: none;} 
 
+        #email-link:hover, #blog-link:hover {
+            color: blue;
+            text-decoration: underline;
+        }
     </style>
 </head>
 
@@ -82,22 +87,32 @@
     </div>
 
     <div id='card'>
-        <div>
-            <img/>
+        <div id="pfp-container">
+            <img>
         </div>
         <b id="name"></b><br>
         <span id="username"></span>
         <button id="edit">Edit Profile</button>
         <p id="bio"></p>
-        <b id="followers"></b> 
-        <a id='followers_url' target="_blank">followers</a> <b>&#183;</b>
-        <b id="following"></b> 
-        <a id="following_url" target="_blank">following</a>
-        <br><br>
-        <span id="company"></span>
-        <span id="email"></span><br>
-        <span id="location"></span><br>
-        <span id="blog"></span>
+        <p>
+            <svg text="muted" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-people">
+                <path fill-rule="evenodd" d="M5.5 3.5a2 2 0 100 4 2 2 0 000-4zM2 5.5a3.5 3.5 0 115.898 2.549 5.507 5.507 0 013.034 4.084.75.75 0 11-1.482.235 4.001 4.001 0 00-7.9 0 .75.75 0 01-1.482-.236A5.507 5.507 0 013.102 8.05 3.49 3.49 0 012 5.5zM11 4a.75.75 0 100 1.5 1.5 1.5 0 01.666 2.844.75.75 0 00-.416.672v.352a.75.75 0 00.574.73c1.2.289 2.162 1.2 2.522 2.372a.75.75 0 101.434-.44 5.01 5.01 0 00-2.56-3.012A3 3 0 0011 4z"></path>
+            </svg>
+            <b id="followers"></b>
+            <a id='followers_url' target="_blank">followers</a> <b>&#183;</b>
+            <b id="following"></b>
+            <a id="following_url" target="_blank">following</a>
+        </p>
+        <div id="other-info">
+            <p id="email"></p>
+            <p id="company"></p>
+            <p id="location"><p>
+            <p id="blog"></p>
+        </div>
+    </div>
+
+    <div id="error">
+        El usuario no existe
     </div>
 </body>
 
@@ -110,8 +125,8 @@
 
     function showSpinner(boolean) {
         let spinner = document.querySelector('.spinner');
-        if (boolean) spinner.style.display = 'block'; 
-        else spinner.style.display = 'none'; 
+        if (boolean) spinner.style.display = 'block';
+        else spinner.style.display = 'none';
     }
 
     function showCard(boolean) {
@@ -120,31 +135,49 @@
         else card.style.display = 'none';
     }
 
+    function showError(boolean) {
+        let error = document.querySelector('#error');
+        if (boolean) error.style.display = 'block';
+        else error.style.display = 'none';
+    }
+
     function printResult(json, username) {
         let card = document.querySelector('#card');
-        // fill out the card 
-        //card.querySelector("#url").value = json.html_url;
-        card.querySelector('img').src = `${json.avatar_url}`;
-        card.querySelector('#name').innerHTML = json.name;
-        card.querySelector('#username').innerHTML = json.login;
-        card.querySelector("#bio").innerHTML = json.bio;
-        card.querySelector("#followers").innerHTML = json.followers;
-        card.querySelector("#following").innerHTML = json.following;
-        card.querySelector('#followers_url').href = `https:github.com/${username}?tab=followers`;
-        card.querySelector('#following_url').href = `https:github.com/${username}?tab=following`;
+        let notfound = document.querySelector('#notfound')
 
-        card.querySelector("#company").innerHTML = json.company;       
-        card.querySelector("#email").innerHTML = json.email;       
-        card.querySelector("#location").innerHTML = json.location;       
-        card.querySelector("#blog").innerHTML = json.blog;       
+        if (json.message === "Not Found") {
+            showCard(false);
+            showError(true);
+        } else {
+            showError(false);
+            showCard(true);
 
-        showCard(true); 
-        console.log(json);
+            card.querySelector('img').src = `${json.avatar_url}`;
+            card.querySelector('#name').innerHTML = json.name;
+            card.querySelector('#username').innerHTML = json.login;
+            card.querySelector("#bio").innerHTML = json.bio;
+            card.querySelector("#followers").innerHTML = json.followers;
+            card.querySelector("#following").innerHTML = json.following;
+            card.querySelector('#followers_url').href = `https:github.com/${username}?tab=followers`;
+            card.querySelector('#following_url').href = `https:github.com/${username}?tab=following`;
+
+            if (json.company == null) card.querySelector('#company').innerHTML = "";
+            else card.querySelector("#company").innerHTML = `<i class="far fa-building"></i> ` + json.company;
+
+            if (json.email == null) card.querySelector("#email").innerHTML = "";
+            else card.querySelector("#email").innerHTML = `<i class="fas fa-envelope"></i> <span id='email-link'>${json.email}</span>`;
+
+            if (json.location == null) card.querySelector("#location").innerHTML = "";
+            else card.querySelector("#location").innerHTML = `<i class='fa fa-map-pin'></i> ` + json.location;
+
+            if (json.blog == null || json.blog === "") card.querySelector("#blog").innerHTML = "";
+            else card.querySelector("#blog").innerHTML = `<i class="fas fa-link"></i> <a id="blog-link" target="_blank" href="${json.blog}">${json.blog}</a>`;
+        }
     }
 
     async function getDataFromAPI(username) {
         showSpinner(true);
-        var url = 'https://api.github.com/users/' + username; 
+        var url = 'https://api.github.com/users/' + username;
         var json = await fetch(url).then(function (response) {
             return response.json();
         });
@@ -162,4 +195,5 @@
     }
 
 </script>
+
 </html>
